crates/kermlc/tests/fixtures/valid/specialization.kerml
package Shapes {
    type Shape {}
    type Circle :> Shape {}
    type Rectangle :> Shape {}
    type Square :> Rectangle {}
}
