crates/kermlc/tests/fixtures/invalid/unresolved_type.kerml
package P {
    type A :> DoesNotExist {}
}
